--- a/package.json
+++ b/package.json
@@ -9,4 +9,8 @@
   "dependencies": {
     "express": "^4.18.2"
   }
+  "scripts": {
+  "start": "node app.js",
+  "test": "echo \"No tests yet\" && exit 0"
+}
 }
