--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
+    "test": "echo \"No tests yet\" && exit 0",
+    "build": "echo \"No build needed\""
   },
   "dependencies": {
     "express": "^4.18.2"
