--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple Node.js app for TeamCity & Azure demo",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "node app.js",
     "test": "echo \"No tests yet\" && exit 0",
     "build": "echo \"No build needed\""
   },
